# vscode-sys

./: Cargo.toml  README.md  aliases.js  package-lock.json  package.json  search-index.js  settings.html  source-files.js
.ci/assets/docs/: index.html
.github/workflows/: ci.yml
examples/hello/: Cargo.toml  README.md  package-lock.json  package.json
examples/hello/src/: lib.rs
implementors/core/convert/: trait.AsRef.js  trait.From.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/ops/deref/: trait.Deref.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/wasm_bindgen/cast/: trait.JsCast.js
implementors/wasm_bindgen/convert/traits/: trait.FromWasmAbi.js  trait.IntoWasmAbi.js  trait.OptionFromWasmAbi.js  trait.OptionIntoWasmAbi.js  trait.RefFromWasmAbi.js
implementors/wasm_bindgen/describe/: trait.WasmDescribe.js
src/: commands.rs  disposable.rs  extension_context.rs  lib.rs  window.rs
src/vscode_sys/: commands.rs.html  disposable.rs.html  extension_context.rs.html  lib.rs.html  window.rs.html
vscode_sys/: all.html  index.html  sidebar-items.js  static.commands.html  static.window.html  struct.Commands.html  struct.Disposable.html  struct.ExtensionContext.html  struct.Window.html
vscode_sys/commands/: static.commands.html  struct.Commands.html
vscode_sys/disposable/: struct.Disposable.html
vscode_sys/extension_context/: struct.ExtensionContext.html
vscode_sys/window/: static.window.html  struct.Window.html
