[package]
edition = "2018"
name = "vscode-sys"
version = "0.1.0"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
license = "(Apache-2.0 OR MIT)"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/freebroccolo/vscode-sys"
description = """
Raw bindings to the vscode API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[lib]

[dependencies]
electron-sys = "0.1.0"
node-sys = "0.1.0"
serde = "1.0.98"
serde_derive = "1.0.98"

[dependencies.js-sys]
version = "0.3.26"
features = []

[dependencies.web-sys]
version = "0.3.26"
features = []

[dependencies.wasm-bindgen]
version = "0.2.49"
features = ["serde-serialize", "strict-macro"]

[patch.crates-io]
electron-sys = { path = "../electron-sys" }
node-sys = { path = "../node-sys" }

[workspace]
members = [
  "examples/hello"
]
