[package]
edition = "2018"
name = "vscode-sys"
version = "0.1.0"
authors = ["Darin Morrison <darinmorrison@users.noreply.github.com>"]
license = "(Apache-2.0 OR MIT)"
readme = "README.md"
categories = ["wasm"]
repository = "https://github.com/freebroccolo/vscode-sys"
description = """
Raw bindings to the vscode API for projects using wasm-bindgen.
"""

[badges]
maintenance = { status = "experimental" }

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
test = false

[dependencies.serde]
version = "^1.0.102"
features = ["derive"]

[dependencies.electron-sys]
git = "https://github.com/interfaces-rs/electron-sys"

[dependencies.node-sys]
git = "https://github.com/interfaces-rs/node-sys"

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dependencies.web-sys]
version = "^0.3.32"
features = []

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["serde-serialize", "strict-macro"]

[workspace]
members = [
  "examples/hello"
]
