[package]
publish = false
name = "example-hello"
version = "0.0.0"
license = "(Apache-2.0 OR MIT)"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.futures-preview]
version = "=0.3.0-alpha.18"
features = ["async-await", "compat", "nightly"]

[dependencies.futures-util-preview]
version = "=0.3.0-alpha.18"
features = ["async-await", "compat", "nightly"]

[dependencies.js-sys]
version = "0.3.26"
features = []

[dependencies.vscode-sys]
path = "../.."

[dependencies.wasm-bindgen]
version = "0.2.49"
features = ["serde-serialize", "nightly"]

[dependencies.wasm-bindgen-futures]
version = "0.3.26"

[dependencies.web-sys]
version = "0.3.26"
features = ["console"]
