[package]
publish = false
edition = "2018"
name = "example-hello"
version = "0.0.0"
license = "(Apache-2.0 OR MIT)"
authors = ["Darin Morrison <freebroccolo@users.noreply.github.com>"]


[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]

[dependencies.console_error_panic_hook]
version = "0.1.6"
optional = true

[dependencies.futures-preview]
version = "=0.3.0-alpha.19"
features = ["async-await", "compat"]

[dependencies.futures-util-preview]
version = "=0.3.0-alpha.19"
features = ["async-await", "compat"]

[dependencies.getrandom]
version = "^0.1.9"
features = ["wasm-bindgen"]

[dependencies.js-sys]
version = "^0.3.32"
features = []

[dependencies.vscode-sys]
path = "../.."

[dependencies.wasm-bindgen]
version = "^0.2.55"
features = ["serde-serialize"]

[dependencies.wasm-bindgen-futures]
version = "^0.4.5"

[dependencies.web-sys]
version = "^0.3.32"
features = [
  "console"
]
